--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 /**
     @author: Oliver Urones
-    @description: Hojº de estilos para iberia interno
+    @description: Hoja de estilos para iberia interno
  */
 // Estilos comunes //
 html, body {
